--- a/Greeting.html
+++ b/Greeting.html
@@ -7,17 +7,9 @@
 <p>일반적인 인사</p>
 
 <ul>
-<li>How are you?</li>
+<li>Hi</li>
 <li>Hello</li>
-<li>Hi.</li>
-</ul>
-
-<p>시간대별 인사</p>
-
-<ul>
-<li>Good morning.</li>
-<li>Good Afternoon</li>
-<li>Good evening</li>
+<li>Nice to meet you</li>
 </ul>
 
 </body></html>
